# rust-xoodyak

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
benches/: benchmark.rs
src/: error.rs  lib.rs  tag.rs  test.rs  xoodoo.rs  xoodyak.rs
src/xoodoo/: impl_aarch64.rs  impl_portable.rs  impl_riscv32.rs  impl_thumb1.rs  impl_thumb2.rs  impl_x86_64.rs  mod.rs
src/xoodyak/: any.rs  encrypt.rs  hash.rs  keyed.rs  mod.rs  std.rs  tag.rs
