[package]
name = "xoodyak"
version = "0.8.3"
authors = ["Frank Denis <github@pureftpd.org>"]
edition = "2018"
description = "Xoodyak / Xoodoo - A versatile cryptographic scheme that can be used for hashing, encryption, MAC computation and authenticated encryption."
readme = "README.md"
keywords = ["crypto", "xoodyak", "xoodoo", "cyclist"]
license = "MIT"
homepage = "https://github.com/jedisct1/rust-xoodyak"
repository = "https://github.com/jedisct1/rust-xoodyak"
categories = ["no-std", "cryptography", "wasm"]

[features]
default = ["std"]
std = []

[dependencies]
zeroize = "1.6"

[dev-dependencies]
benchmark-simple = "0.1.8"

[profile.release]
codegen-units = 1
incremental = false
panic = "abort"
lto = "fat"

[profile.bench]
codegen-units = 1

[[bench]]
name = "benchmark"
harness = false
